--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,19 +29,26 @@ family=Lato -> Títulos, textos
 /* FONTS */
 
 /* VARIÁVEIS */
-:root{}
+:root{
+    --cor-branca-letras:#FFFFFF;
+    --cor-azul-escuro:#00043e;
+    --cor-azul-claro:#007aff;
+    --cor-cinza-claro:#818181;
+    --cor-cinza-maisclaro:#f6f6f6;
+    --cor-cinza-escuro:#303030;
+}
   
 /* GERAL */
-html, body, figure, div, input, textarea, p, h1, h2, h3, h4, h5, h6, ul{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    list-style: none;
+html, body, figure, div, input, textarea, p, h1, h2, h3, h4, h5, h6, ul
+
+*{
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+    box-sizing: 0px;
 }
-img{
-    max-width: 800px;
-}
+
+
 div.flex{
     display: flex;
 }
@@ -60,6 +67,395 @@ div.container{
     max-width: 1140px;
     margin:0 auto;
 }
+
+    body{
+       font-family: "Lato"; 
+    }
+
+    h2{
+        font-family: "Montserrat";
+    }
+
+
+    figcaption{
+        display: none;
+    }
+
+    .large-container img{
+        width: 75px;
+        padding-left: 10px;
+        padding-top: 10px;
+    }
+
+    .large-container ul{
+        opacity: 0;
+    }
+
+    .topo{
+        background-color: var(--cor-azul-escuro);
+        width: 100%;
+        height: 125px;
+        display: flex;
+    }
+
+    #icon{
+        height: 30px;
+        padding-right: 30px;
+        padding-top: 30px;
+    }
+
+    .secaoDestaque{
+        color: var(--cor-branca-letras);
+        background-color: var(--cor-azul-escuro);
+        height:350px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .secaoDestaque h2{
+        width: 90vw;
+        height: 30vmin;
+        display: flex;
+        font-weight: 400;
+        font-size: 40px;
+        text-align: center;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .secaoDestaque p{
+        width: 100%;
+        height: 20vmin;
+        font-size: 25px;
+        font-weight: 400;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .secaoDestaqueFormulario{
+        display: flex;
+    }
+
+    .secaoDestaqueFormulario input{
+        height: 9vmin;
+        width: 50vmin;
+        border-radius: 4px;
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 0px;
+        border-style: none;
+    }
+
+    .secaoDestaqueFormulario button{
+        height: 9vmin;
+        width: 25vmin;
+        background-color: var(--cor-azul-claro);
+        color: var(--cor-branca-letras);
+        border-radius: 4px;
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
+        border-style: none;
+    }
+
+    .secaoSobre{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .flex{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .flex-col{
+        width: 40vmax;
+        height: 600px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        font-size: 19px;
+    }
+
+    .flex-col h2{
+        font-size: 24px;
+    }
+
+    .flex-pt img{
+        width: 275px;
+    }
+
+    .flex-col button{
+        width: 100%;
+        height: 15vmin;
+        background-color: var(--cor-branca-letras);
+        border-color:  var(--cor-cinza-claro);
+        border-style: solid;
+        border-width: 1.5px;
+        border-radius: 7px;
+    }
+
+    .flex1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--cor-cinza-maisclaro);
+    }
+
+    .flex1 img{
+        width: 150px;
+    }
+
+    .flex-col1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .flex-col1 h2{
+        font-size: 24px;
+        width: 30vmax;
+        height: 150px;
+        display: flex;
+    }
+
+    .flex-col1 ul{
+        color: var(--cor-cinza-claro);
+        display: flex;
+        font-size: 19px;
+        flex-direction: column;
+        justify-content: space-evenly;
+        width: 40vmax;
+        height: 400px;
+        list-style-type: disc;
+    }
+
+    .secaoCursos article{
+        height: 2000px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .secaoCursos ul{
+        height: 1800px;
+        width: 275px;
+        margin: 0px;
+        padding: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .secaoCursos li p{
+        display: flex;
+    }
+
+    .secaoCursos li{
+        height: 275px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        text-align: center;
+    }
+
+    .imagens1{
+        width: 75px;
+    }
+
+    .secaoCalendar{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .calendario{
+        height: 1800px;
+        width: 225px;
+        margin: 0px;
+        padding: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .calendario li{
+        width: 225px;
+        height: 500px;
+        border-style: solid;
+        border-color: var(--cor-azul-escuro);
+        border-width: 1.5px;
+        margin: 0px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .calendario-data{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-size: 36px;
+        width: 100%;
+        height: 100px;
+        background-color: var(--cor-azul-escuro);
+        color: var(--cor-branca-letras);
+    }
+
+    .calendario h3{
+        height: 50px ;
+        display: flex;
+        font-size: 19px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .calendario p{
+        font-size: 15px;
+        width: 200px;
+        height: 175px;
+    }
+
+    .calendario-data-rodape{
+        border-top-style: solid;
+        border-top-width: 1.5px;
+        border-top-color: var(--cor-cinza-claro);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        height: 150px;
+        width: 100%;
+    }
+
+    .calendario-data-rodape button{
+        height: 6vh;
+        width: 27vh;  
+        font-size: 25px;
+        font-family:"Lato" ;
+        font-weight: 300;
+        background-color: var(--cor-azul-claro);
+        color: var(--cor-branca-letras);
+        border-style: none;
+        border-radius: 7px;
+    }
+
+    .calendario-data-rodape span{
+        color: var(--cor-cinza-claro);
+        font-size:36px ;
+    }
+
+    .secaoContato{
+        height: 600px;
+        background-color: var(--cor-cinza-maisclaro);
+    }
+
+    .secaoContato h2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100px;
+    }
+
+    .flex2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .flex-col2{
+        display: flex;
+        width: 200px;
+        height: 300px;
+    }
+
+    .flex-col2 p{
+        color: var(--cor-cinza-claro);
+    }
+
+    .flex-col2 ul{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: 100px;
+        width: 224px;
+        list-style: none;
+        padding:0px;
+        margin: 0px;
+    }
+
+    .flex-col2 li a{
+        text-decoration: none;
+        color: var(--cor-cinza-claro);
+    }
+
+    .flex-col3 label{
+        display: none;
+    }
+
+    .flex-col3{
+        height: 300px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .flex-col3 form{
+        width: 30vmax;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: space-around;
+    }
+
+    .form-input-model input{
+        height: 4vmax;
+        width: 30vmax;
+        border-style: solid;
+        border-width: 1px;
+        border-color: var(--cor-cinza-claro);
+        border-radius: 5px;
+    }
+
+    
+
+    .form-input-model textarea{
+        height: 15vmax;
+        width: 30vmax;
+        border-style: solid;
+        border-width: 1px;
+        border-color: var(--cor-cinza-claro);
+        border-radius: 5px;
+    }
+
+    #buton{
+        height: 5vmax;
+        width: 10vmax;
+        background-color: var(--cor-branca-letras);
+        border-style: solid;
+        border-width: 1px;
+        border-color: var(--cor-cinza-claro);
+        border-radius: 5px
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 /* GERAL */
   
 /* HTML */
@@ -97,7 +493,105 @@ main{}
   
 
 /* MEDIA QUERIES */
-    @media screen and (min-width: 400px) {}
+    @media screen and (min-width: 450px) {
+
+        .topo 
+
+        
+    }
+
+    
   
-    @media screen and (min-width: 800px) {}
+    @media screen and (min-width: 800px) {
+        
+
+
+        #icon{
+            display: none;
+        }
+
+        .large-container{
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .large-container img{
+            padding-top: 2.5vw;
+            padding-left: 10vh;
+        }
+
+        .large-container ul{
+            width: 50vh;
+            height: 8vw;
+            opacity: 1;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            list-style: none;
+        }
+
+        .large-container li a{
+            text-decoration: none;
+            color: var(--cor-branca-letras);
+        }
+
+        .secaoDestaque{
+            color: var(--cor-branca-letras);
+            background-image: url(file:///home/pablo/estilizando-pagina-landing-page-kenzie-academy-sprint-3-PabloMSantos23/assets/img/background-destaque.webp);
+            background-size:cover ;
+            height: 60vh;
+            justify-content: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+       .secaoDestaqueFormulario input{
+            height: 5vmin;
+            width: 45vmin;
+            border-radius: 4px;
+            border-top-right-radius: 0px;
+            border-bottom-right-radius: 0px;
+            border-style: none;
+        }
+    
+        .secaoDestaqueFormulario button{
+            height: 5vmin;
+            width: 15vmin;
+            background-color: var(--cor-azul-claro);
+            color: var(--cor-branca-letras);
+            border-radius: 4px;
+            border-top-left-radius: 0px;
+            border-bottom-left-radius: 0px;
+            border-style: none;
+        }
+
+        .secaoDestaque h2{
+            width: 90vw;
+            height: 8vh;
+            display: flex;
+            font-weight: 400;
+            font-size: 40px;
+            text-align: center;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+    
+        .secaoDestaque p{
+            width: 100%;
+            height: 8vh;
+            font-size: 25px;
+            font-weight: 400;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+
+        
+
+
+
+    }
 /* MEDIA QUERIES */
